src/test/deca/context/invalid/provided/incompatible_oparith.deca
//Resultats :
//Erreur contextuelle
//Ligne 4: Cannot apply an arithmetic operationto this type
{int x = 2 + true;}
